Fix spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,5 @@
 body {
   color: #444;
-  font-weight: 300;
-}
-
-header {
-  padding: 100px 0 100px;
-}
-
-section {
-  padding: 50px 0;
 }
 
 h1 {
@@ -35,7 +26,6 @@ a:hover {
 .odd-section {
   background-color: rgb(250, 250, 250);
 }
-
 
 /* footer {
   background-color: rgb(239, 239, 248);
